# kaldlite

./: CMakeLists.txt  README.md
include/: compute-mfcc-feats.h  feat-util.h
include/kaldi/ivectorbin/: compute-vad.h
include/kaldi/matrix/: kaldi-blas.h
include/libsvm/: svm-predict.h  svm-train.h  svm_model_matlab.h
kaldi/base/: kaldi-error.cc  kaldi-math.cc  timer.cc
kaldi/ivectorbin/: compute-vad.cc
libsvm/: svm-predict.c  svm.cpp
